@@ -1,3 +1,12 @@
+2005-12-12  Justin Garcia  <justin.garcia@apple.com>
+
+        Reviewed by harrison
+
+        * editing/selection/previous-line-position-expected.checksum: Added.
+        * editing/selection/previous-line-position-expected.png: Added.
+        * editing/selection/previous-line-position-expected.txt: Added.
+        * editing/selection/previous-line-position.html: Added.
+
 2005-12-12  David Harrison  <harrison@apple.com>
 
 	<rdar://problem/4026906> Paste of HTML table content can break table structure
